--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 body {
-  background-color: #ccc;
+  background-color: #1D1D1C;
+  font-family: 'Poppins', sans-serif;
   /* color: #fff; */
 }
 
 header {
   float: left;
   width: 25%;
+  text-align: center;
 }
 
 main {
@@ -22,17 +24,28 @@ nav {
   width: 70%;
   float: right;
   margin: 5em 3em 0 0;
+	font-size: 1.25em;
+	font-weight: bold;
+	text-align: center;
+	margin-top: 1em;
 }
 
 nav ul {
   list-style-type: none;
   margin: 0;
   text-align: right;
+  padding: 0;
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
 }
 
 nav li {
   display: inline-block;
-  font-size: 1.75em;
+  background-color: #9D9D93;
+	border-radius: 2em;
+	list-style-type: none;
+	margin: 0.3em;
+	padding: 0.4em;
 }
 
 nav li a {
@@ -44,8 +57,9 @@ nav li a {
 }
 
 .container {
-  width: 80%;
-  margin: 0 auto;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #exercises {
@@ -54,6 +68,8 @@ nav li a {
   border-bottom: 1px solid #000;
   padding: 1px 1px;
   color: #fff;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .external-link {
@@ -63,6 +79,7 @@ nav li a {
 
 #copyright {
   text-align: center;
+  color: #fff;
 }
 
 .center {
