--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ nav ul {
 
 nav li {
   display: inline-block;
-  background-color: #9D9D93;
+  background-color: #066163;
 	border-radius: 2em;
 	list-style-type: none;
 	margin: 0.3em;
